# chipnomad-tracker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  convert_includes.sh
chipnomad_lib/: playback.c  playback.h  playback_ay.c  playback_fx_ay.c  playback_fx_common.c  playback_internal.h  project.c  project.h  utils.c  utils.h
chipnomad_lib/corelib_file_sdl3/: corelib_file_sdl3.c
chipnomad_lib/export/: export.h  export_wav.c
docs/: manual.md
tracker/: CMakeLists.txt  Dockerfile.linux  Makefile.linux  Makefile.macos  Makefile.portmaster  Makefile.rg35xx  Makefile.sdl3  Makefile.sdl3-mobile  Makefile.windows  README.md  backup-tracks.sh  build-linux-docker.sh  deploy-all.sh  makefile
tracker/packaging/common/pitch-tables/: PT3-0.csv  PT3-1.csv  PT3-2.csv  PT3-3.csv
tracker/packaging/common/projects/: SkyTrain Funk.cnm
tracker/packaging/common/themes/: Default.cth  nIkO.cth
tracker/packaging/linux/: README.txt
tracker/src/: app.c  audio_manager.c  audio_manager.h  common.c  common.h  copy_paste.c  copy_paste.h  keyboard_layout.c  keyboard_layout.h  pitch_table_utils.c  pitch_table_utils.h  project_utils.c  project_utils.h  version.c  waveform_display.c  waveform_display.h
tracker/src/corelib/: corelib_gfx.h
tracker/src/import/: import_common.c  import_common.h  import_vt2.c  import_vt2.h  import_vts.c  import_vts.h  pt3_tables.c  pt3_tables.h
tracker/src/screens/: edit_character.c  edit_fx.c  export_ay.c  file_browser.c  file_browser.h  help.c  instrument_ay.c  project_ay.c  screen_chain.c  screen_color_theme.c  screen_color_theme.h  screen_confirm.c  screen_create_folder.c  screen_export.c  screen_export.h  screen_file_browser.c  screen_groove.c  screen_instrument.c  screen_instrument_pool.c  screen_manage.c  screen_phrase.c  screen_pitch_table.c  screen_project.c  screen_project.h  screen_settings.c  screen_song.c  screen_table.c  screens.c  screens.h
